BDO-4 - Separar zonas

--- a/Obligatorio Big Data/graficos.ipynb
+++ b/Obligatorio Big Data/graficos.ipynb
@@ -16,9 +16,9 @@
     "import numpy as np\n",
     "from scipy.interpolate import make_interp_spline\n",
     "\n",
-    "df_athletes_medals = pd.read_csv('./datos_clean/olympic_athletes_medals.csv')\n",
-    "df_hosts = pd.read_csv('./datos/olympic_hosts.csv')\n",
-    "df_results = pd.read_csv('./datos/olympic_results.csv')"
+    "df_athletes_medals = pd.read_csv('datos/refined/olympic_athletes_medals.csv')\n",
+    "df_hosts = pd.read_csv('datos/raw/olympic_hosts.csv')\n",
+    "df_results = pd.read_csv('datos/raw/olympic_results.csv')"
    ]
   },
   {
