BDO-3 - Archivo CSV raw creado en base al PKL de landing

--- a/Obligatorio Big Data/1-procesamiento_landing.ipynb
+++ b/Obligatorio Big Data/1-procesamiento_landing.ipynb
@@ -71,6 +71,7 @@
     "            df.to_csv(ruta_archivo_raw, index=False)\n",
     "        elif nombre_archivo.endswith('.pkl'):\n",
     "            df.to_pickle(ruta_archivo_raw)\n",
+    "            df.to_csv(ruta_archivo_raw.replace('.pkl', '_from_pkl.csv'), index=False)\n",
     "        \n",
     "        print(f\"Archivo '{nombre_archivo}' guardado en la zona raw.\")\n",
     "    else:\n",
