BDO-2 Graficos y update de notebook

--- a/Obligatorio Big Data/2-analisis_archivo_pickle.ipynb
+++ b/Obligatorio Big Data/2-analisis_archivo_pickle.ipynb
@@ -1,46 +1,53 @@
 {
  "cells": [
   {
-   "metadata": {},
    "cell_type": "code",
-   "source": "import pandas as pd",
+   "execution_count": null,
    "id": "initial_id",
+   "metadata": {},
    "outputs": [],
-   "execution_count": null
+   "source": [
+    "import pandas as pd"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "Objetivo: Leer archivo PKL olympic_results.pkl y compararlo con archivo CSV con el mismo nombre",
-   "id": "901e59413db7e91"
+   "id": "901e59413db7e91",
+   "metadata": {},
+   "source": [
+    "Objetivo: Leer archivo PKL olympic_results.pkl y compararlo con archivo CSV con el mismo nombre"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "dcfc4c320858c6cf",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# CSV olympic_results\n",
     "df_csv = pd.read_csv('datos/raw/olympic_results.csv')\n",
     "df_csv"
-   ],
-   "id": "dcfc4c320858c6cf",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "28ecc2de3122fb9f",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Pickle olympic_results\n",
     "df_pkl = pd.read_pickle('datos/raw/olympic_results.pkl')\n",
     "df_pkl"
-   ],
-   "id": "28ecc2de3122fb9f",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "52a0efa4615a7046",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def analizar_df(df):\n",
     "    # Crear una lista para almacenar el resumen de las columnas\n",
@@ -83,140 +90,146 @@
     "\n",
     "    # Devolver el resumen\n",
     "    return resumen\n"
-   ],
-   "id": "52a0efa4615a7046",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "source": "analizar_df(df_csv)",
+   "execution_count": null,
    "id": "693f90227a927b5e",
+   "metadata": {},
    "outputs": [],
-   "execution_count": null
+   "source": [
+    "analizar_df(df_csv)"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "source": "analizar_df(df_pkl)",
+   "execution_count": null,
    "id": "8d35c3cbdec1e0c2",
+   "metadata": {},
    "outputs": [],
-   "execution_count": null
+   "source": [
+    "analizar_df(df_pkl)"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "cffc892d59bdcfae",
+   "metadata": {},
    "source": [
     "Observamos diferencias en la cantidad de nulos y cadenas vacías.\n",
     "Decidimos reemplazar los valores nulos por cadenas vacías para mantener un criterio en común entre los dos data frames"
-   ],
-   "id": "cffc892d59bdcfae"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "3e13a4db53139d4",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Reemplazar valores nulos por strings vacíos en todas las columnas\n",
     "df_csv = df_csv.fillna('')"
-   ],
-   "id": "3e13a4db53139d4",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "ddc382717fa8c7ec",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Reemplazar valores nulos por strings vacíos en todas las columnas\n",
     "df_pkl = df_pkl.fillna('')"
-   ],
-   "id": "ddc382717fa8c7ec",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "1ce33e8e940b5b15",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "analizar_csv_resultado = analizar_df(df_csv)\n",
     "analizar_csv_resultado"
-   ],
-   "id": "1ce33e8e940b5b15",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "d3d1fe401a099b8e",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "analizar_pkl_resultado = analizar_df(df_pkl)\n",
     "analizar_pkl_resultado"
-   ],
-   "id": "d3d1fe401a099b8e",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "Evaluamos las diferencias que continuan entre los dos data frames",
-   "id": "cbf419c81f92df2d"
+   "id": "cbf419c81f92df2d",
+   "metadata": {},
+   "source": [
+    "Evaluamos las diferencias que continuan entre los dos data frames"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "66b08ed64871e5fb",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Reset index y alinear - los DataFrames deben estar alineados correctamente antes de compararlos\n",
     "df_csv_reset = df_csv.reset_index(drop=True)\n",
     "df_pkl_reset = df_pkl.reset_index(drop=True)\n",
     "\n",
     "df_csv_aligned, df_pkl_aligned = df_csv_reset.align(df_pkl_reset)"
-   ],
-   "id": "66b08ed64871e5fb",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "d64f8f7c744fd15c",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "differencias_analisis = analizar_csv_resultado.compare(analizar_pkl_resultado)\n",
     "# Identificar las filas completas con diferencias\n",
     "differences_indices = differencias_analisis.index\n",
     "df_csv_diff = analizar_csv_resultado.loc[differences_indices]\n",
     "df_pkl_diff = analizar_pkl_resultado.loc[differences_indices]"
-   ],
-   "id": "d64f8f7c744fd15c",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "3223dcd89969e3f1",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Mostrar las filas completas con diferencias\n",
     "print(\"En el DataFrame CSV:\")\n",
     "df_csv_diff"
-   ],
-   "id": "3223dcd89969e3f1",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "453ef1d25eedd2e9",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "print(\"En el DataFrame PKL:\")\n",
     "df_pkl_diff"
-   ],
-   "id": "453ef1d25eedd2e9",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "548dfa9f14a05700",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def comparar_columnas(df1, df2):\n",
     "    \"\"\"\n",
@@ -248,28 +261,32 @@
     "            print(f\"Diferencias encontradas en la columna '{column}':\")\n",
     "            differences = col1.compare(col2)\n",
     "            print(differences)"
-   ],
-   "id": "548dfa9f14a05700",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "source": "comparar_columnas(df_csv_aligned, df_pkl_aligned)",
+   "execution_count": null,
    "id": "af74954e0449de87",
+   "metadata": {},
    "outputs": [],
-   "execution_count": null
+   "source": [
+    "comparar_columnas(df_csv_aligned, df_pkl_aligned)"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "Se observan diferencias en las columnas 'athletes' y 'country_code'.",
-   "id": "d5ba60a4e8a384c3"
+   "id": "d5ba60a4e8a384c3",
+   "metadata": {},
+   "source": [
+    "Se observan diferencias en las columnas 'athletes' y 'country_code'."
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "bb1e7ec8399079b4",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#Evaluamos country_code\n",
     "csv_country_code = df_csv_aligned['country_code']\n",
@@ -279,96 +296,108 @@
     "diferencia_cc = csv_country_code.compare(pkl_country_code)\n",
     "print(f\"{len(diferencia_cc)} filas\")\n",
     "diferencia_cc"
-   ],
-   "id": "bb1e7ec8399079b4",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "eabcd2b76f9927dd",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Identificar las filas completas con diferencias de country_code\n",
     "diferencia_cc_indices = diferencia_cc.index\n",
     "df_csv_diff_cc = df_csv_aligned.loc[diferencia_cc_indices]\n",
     "df_pkl_diff_cc = df_pkl_aligned.loc[diferencia_cc_indices]"
-   ],
-   "id": "eabcd2b76f9927dd",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "ce638b04424ed23b",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Mostrar las filas completas con diferencias\n",
     "print(\"En el DataFrame CSV:\")\n",
     "df_csv_diff_cc"
-   ],
-   "id": "ce638b04424ed23b",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "44a8847e4cacf78e",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "print(\"En el DataFrame PKL:\")\n",
     "df_pkl_diff_cc"
-   ],
-   "id": "44a8847e4cacf78e",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "source": "comparar_columnas(df_csv_diff_cc, df_pkl_diff_cc)",
+   "execution_count": null,
    "id": "8266ef8c886e31ef",
+   "metadata": {},
    "outputs": [],
-   "execution_count": null
+   "source": [
+    "comparar_columnas(df_csv_diff_cc, df_pkl_diff_cc)"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "source": "df_csv_diff_cc[['country_name', 'country_code', 'country_3_letter_code']]",
+   "execution_count": null,
    "id": "4ce88a4eeab58aba",
+   "metadata": {},
    "outputs": [],
-   "execution_count": null
+   "source": [
+    "df_csv_diff_cc[['country_name', 'country_code', 'country_3_letter_code']]"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "source": "df_pkl_diff_cc[['country_name', 'country_code', 'country_3_letter_code']]",
+   "execution_count": null,
    "id": "4c6051ded07511da",
+   "metadata": {},
    "outputs": [],
-   "execution_count": null
+   "source": [
+    "df_pkl_diff_cc[['country_name', 'country_code', 'country_3_letter_code']]"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "Observamos diferencias para el código del país \"Namibia\", probablemente causadas por la coincidencia con \"Not Available\" de Python. Decidimos aplicar el código de país \"NA\" a todas las filas con país \"Namibia\" en el df proveniente del CSV",
-   "id": "232857c9599842e"
+   "id": "232857c9599842e",
+   "metadata": {},
+   "source": [
+    "Observamos diferencias para el código del país \"Namibia\", probablemente causadas por la coincidencia con \"Not Available\" de Python. Decidimos aplicar el código de país \"NA\" a todas las filas con país \"Namibia\" en el df proveniente del CSV"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "source": "df_csv_aligned.loc[df_csv_aligned['country_name'] == 'Namibia', 'country_code'] = 'NA'",
+   "execution_count": null,
    "id": "e8e8105f1fb31026",
+   "metadata": {},
    "outputs": [],
-   "execution_count": null
+   "source": [
+    "df_csv_aligned.loc[df_csv_aligned['country_name'] == 'Namibia', 'country_code'] = 'NA'"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "source": "comparar_columnas(df_csv_aligned, df_pkl_aligned)",
+   "execution_count": null,
    "id": "4e378cca3ce244e9",
+   "metadata": {},
    "outputs": [],
-   "execution_count": null
+   "source": [
+    "comparar_columnas(df_csv_aligned, df_pkl_aligned)"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "5f93d47fa14f3aed",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#Evaluamos athletes\n",
     "csv_athletes = df_csv_aligned['athletes']\n",
@@ -378,56 +407,58 @@
     "diferencia_at = csv_athletes.compare(pkl_athletes)\n",
     "print(f\"{len(diferencia_at)} filas\")\n",
     "diferencia_at"
-   ],
-   "id": "5f93d47fa14f3aed",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "2b93af5e52be68df",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Identificar las filas completas con diferencias de athletes\n",
     "diferencia_at_indices = diferencia_at.index\n",
     "df_csv_diff_at = df_csv_aligned.loc[diferencia_at_indices]\n",
     "df_pkl_diff_at = df_pkl_aligned.loc[diferencia_at_indices]"
-   ],
-   "id": "2b93af5e52be68df",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "d1f20e57282f7a5a",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Mostrar las filas completas con diferencias\n",
     "print(\"En el DataFrame CSV:\")\n",
     "df_csv_diff_at"
-   ],
-   "id": "d1f20e57282f7a5a",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "7b8ea0520eda5b88",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "print(\"En el DataFrame PKL:\")\n",
     "df_pkl_diff_at"
-   ],
-   "id": "7b8ea0520eda5b88",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "Se observa diferencia de formato la columna athletes",
-   "id": "c0ae1e894d4a68c4"
+   "id": "c0ae1e894d4a68c4",
+   "metadata": {},
+   "source": [
+    "Se observa diferencia de formato la columna athletes"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "15ec9263db2ba943",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def identificar_tipos(df, column_name):\n",
     "    \"\"\"\n",
@@ -440,30 +471,34 @@
     "    types_summary = df[column_name].apply(lambda x: type(x).__name__).value_counts()\n",
     "    print(f\"Resumen de tipos de datos en la columna '{column_name}':\")\n",
     "    print(types_summary)"
-   ],
-   "id": "15ec9263db2ba943",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "source": "identificar_tipos(df_csv_aligned, 'athletes')",
+   "execution_count": null,
    "id": "cb36ddd4b4d35732",
+   "metadata": {},
    "outputs": [],
-   "execution_count": null
+   "source": [
+    "identificar_tipos(df_csv_aligned, 'athletes')"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "source": "identificar_tipos(df_pkl_aligned, 'athletes')",
+   "execution_count": null,
    "id": "db10c2d67d06411c",
+   "metadata": {},
    "outputs": [],
-   "execution_count": null
+   "source": [
+    "identificar_tipos(df_pkl_aligned, 'athletes')"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "2e8de871c0ecf61f",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import ast\n",
     "\n",
@@ -475,86 +510,95 @@
     "        return ast.literal_eval(x)\n",
     "    except (ValueError, SyntaxError):\n",
     "        return x"
-   ],
-   "id": "2e8de871c0ecf61f",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "4755d3f6755ad7b4",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Aplicar la función a la columna athletes proveniente del csv\n",
     "df_csv_aligned['athletes_converted'] = df_csv_aligned['athletes'].apply(convertir_string_a_list)"
-   ],
-   "id": "4755d3f6755ad7b4",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "source": "identificar_tipos(df_csv_aligned, 'athletes_converted')",
+   "execution_count": null,
    "id": "e4ec0292c7a82aef",
+   "metadata": {},
    "outputs": [],
-   "execution_count": null
+   "source": [
+    "identificar_tipos(df_csv_aligned, 'athletes_converted')"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "source": "df_csv_aligned['athletes'] = df_csv_aligned['athletes_converted']",
+   "execution_count": null,
    "id": "f9b5189ee4fd0378",
+   "metadata": {},
    "outputs": [],
-   "execution_count": null
+   "source": [
+    "df_csv_aligned['athletes'] = df_csv_aligned['athletes_converted']"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "source": "df_csv_aligned = df_csv_aligned.drop(columns=['athletes_converted'])",
+   "execution_count": null,
    "id": "aba99f1dcf84f737",
+   "metadata": {},
    "outputs": [],
-   "execution_count": null
+   "source": [
+    "df_csv_aligned = df_csv_aligned.drop(columns=['athletes_converted'])"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "source": "comparar_columnas(df_csv_aligned, df_pkl_aligned)",
+   "execution_count": null,
    "id": "3f052e5787fb0da7",
+   "metadata": {},
    "outputs": [],
-   "execution_count": null
+   "source": [
+    "comparar_columnas(df_csv_aligned, df_pkl_aligned)"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "Confirmamos que los datos de estos archivos coinciden, y optamos por usar la versión PKL para evitar el error con el país \"Namibia\".",
-   "id": "b78b4178cba28d0c"
+   "id": "b78b4178cba28d0c",
+   "metadata": {},
+   "source": [
+    "Confirmamos que los datos de estos archivos coinciden, y optamos por usar la versión PKL para evitar el error con el país \"Namibia\"."
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "source": "# df_pkl.to_csv('datos/raw/olympic_results_from_pkl.csv')",
+   "execution_count": null,
    "id": "a156bd06e971314f",
+   "metadata": {},
    "outputs": [],
-   "execution_count": null
+   "source": [
+    "# df_pkl.to_csv('datos/raw/olympic_results_from_pkl.csv')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
