--- a/Obligatorio Big Data/1-procesamiento_landing.ipynb
+++ b/Obligatorio Big Data/1-procesamiento_landing.ipynb
@@ -2,30 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "initial_id",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import os"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "e17175d22ace7971",
+   "metadata": {},
    "source": [
     "Objetivos: \n",
     "- Leer los archivos de la zona de landing, verificar que se pueden acceder. \n",
     "- Crear archivos en la zona raw para continuar con el análisis y enriquecimiento."
-   ],
-   "id": "e17175d22ace7971"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "53a975c31f2dc556",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Funciones para leer archivos CSV y PKL\n",
     "def leer_csv(ruta):\n",
@@ -76,29 +77,26 @@
     "        print(f\"Archivo '{nombre_archivo}' guardado en la zona raw.\")\n",
     "    else:\n",
     "        print(f\"El archivo '{nombre_archivo}' no pudo ser leído.\")\n"
-   ],
-   "id": "53a975c31f2dc556",
-   "outputs": [],
-   "execution_count": null
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
