(BDO-6)-Limpieza-Hosts&Conversion - Leer de csv converted pkl

--- a/Obligatorio Big Data/3-procesamiento_refined.ipynb
+++ b/Obligatorio Big Data/3-procesamiento_refined.ipynb
@@ -13,8 +13,8 @@
    "id": "f90a84d2-efe5-4eb8-8ca1-7aa88fa27638",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-05T05:31:59.366287Z",
-     "start_time": "2024-07-05T05:31:57.925772Z"
+     "end_time": "2024-07-06T00:55:42.888342Z",
+     "start_time": "2024-07-06T00:55:41.709602Z"
     }
    },
    "source": [
@@ -26,7 +26,7 @@
     "df_medals = pd.read_csv('datos/raw/olympic_medals.csv')\n",
     "\n",
     "# Cargamos el archivo de resultados\n",
-    "df_results = pd.read_pickle('datos/raw/olympic_results.pkl')\n",
+    "df_results = pd.read_csv('datos/raw/olympic_results_from_pkl.csv')\n",
     "\n",
     "# Cargamos el archivo de atletas\n",
     "df_atletas = pd.read_csv('datos/raw/olympic_athletes.csv')\n",
@@ -35,7 +35,7 @@
     "df_hosts = pd.read_csv('datos/raw/olympic_hosts.csv')"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 27
   },
   {
    "cell_type": "markdown",
