(BDO-6)-Limpieza-Hosts&Conversion - Forzar versiones de pandas y numpy para poder leer pickle

--- a/Obligatorio Big Data/1-procesamiento_landing.ipynb
+++ b/Obligatorio Big Data/1-procesamiento_landing.ipynb
@@ -1,8 +1,43 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e17175d22ace7971",
+   "metadata": {},
+   "source": [
+    "## Procesamiento Landing\n",
+    "### Objetivos: \n",
+    "- Leer los archivos de la zona de landing, verificar que se pueden acceder. \n",
+    "- Crear archivos en la zona raw para continuar con el análisis y enriquecimiento."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "44fc9374ca1ed76e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: numpy==1.26.4 in /usr/local/anaconda3/lib/python3.12/site-packages (1.26.4)\n",
+      "Requirement already satisfied: pandas==2.2.2 in /usr/local/anaconda3/lib/python3.12/site-packages (2.2.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/anaconda3/lib/python3.12/site-packages (from pandas==2.2.2) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /usr/local/anaconda3/lib/python3.12/site-packages (from pandas==2.2.2) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /usr/local/anaconda3/lib/python3.12/site-packages (from pandas==2.2.2) (2023.3)\n",
+      "Requirement already satisfied: six>=1.5 in /usr/local/anaconda3/lib/python3.12/site-packages (from python-dateutil>=2.8.2->pandas==2.2.2) (1.16.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install numpy==1.26.4 pandas==2.2.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "initial_id",
    "metadata": {},
    "outputs": [],
@@ -12,21 +47,28 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "e17175d22ace7971",
-   "metadata": {},
-   "source": [
-    "Objetivos: \n",
-    "- Leer los archivos de la zona de landing, verificar que se pueden acceder. \n",
-    "- Crear archivos en la zona raw para continuar con el análisis y enriquecimiento."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "53a975c31f2dc556",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archivo 'olympic_medals.csv' guardado en la zona raw.\n",
+      "Archivo '.DS_Store' ignorado. Formato no soportado.\n",
+      "Archivo 'olympic_results.pkl' guardado en la zona raw.\n",
+      "Archivo 'olympic_hosts.csv' guardado en la zona raw.\n",
+      "Archivo 'olympic_athletes.csv' guardado en la zona raw.\n",
+      "Archivo 'olympic_results.csv' guardado en la zona raw.\n"
+     ]
+    }
+   ],
    "source": [
     "# Funciones para leer archivos CSV y PKL\n",
     "def leer_csv(ruta):\n",
@@ -96,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
