--- a/Obligatorio Big Data/will_delete/analisis-datos.ipynb
+++ b/Obligatorio Big Data/will_delete/analisis-datos.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "id": "b28e1e35-f6a4-4159-8632-4a6f5a7fdc1c",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "ExecuteTime": {
+     "end_time": "2024-07-06T06:01:51.362384Z",
+     "start_time": "2024-07-06T06:01:49.595891Z"
+    }
    },
    "source": [
     "import pandas as pd\n",
@@ -18,7 +22,7 @@
     "df_results_pkl = pd.read_pickle('datos/raw/olympic_results.pkl')"
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 1
   },
   {
    "cell_type": "code",
