(BDO-6)-Limpieza-Hosts&Conversion  - Ajusto comentarios en análisis pickle

--- a/Obligatorio Big Data/analisis_archivo_pickle.ipynb
+++ b/Obligatorio Big Data/analisis_archivo_pickle.ipynb
@@ -5,7 +5,9 @@
    "id": "901e59413db7e91",
    "metadata": {},
    "source": [
-    "### Objetivo: Leer archivo PKL olympic_results.pkl y compararlo con archivo CSV con el mismo nombre"
+    "## Análisis de archivo olympic_results.PKL\n",
+    "### Objetivo: \n",
+    "- Leer archivo PKL olympic_results.pkl y compararlo con archivo CSV con el mismo nombre"
    ]
   },
   {
@@ -1362,7 +1364,7 @@
    "metadata": {},
    "source": [
     "Observamos diferencias en la cantidad de nulos y cadenas vacías.\n",
-    "Decidimos reemplazar los valores nulos por cadenas vacías para mantener un criterio en común entre los dos data frames"
+    "Decidimos reemplazar los valores nulos por cadenas vacías para mantener un criterio en común entre los dos DataFrames"
    ]
   },
   {
@@ -1931,9 +1933,7 @@
    "cell_type": "markdown",
    "id": "cbf419c81f92df2d",
    "metadata": {},
-   "source": [
-    "Evaluamos las diferencias que continuan entre los dos data frames"
-   ]
+   "source": "Evaluamos las diferencias que continúan entre los dos data frames"
   },
   {
    "cell_type": "code",
@@ -1956,9 +1956,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "differencias_analisis = analizar_csv_resultado.compare(analizar_pkl_resultado)\n",
+    "diferencias_analisis = analizar_csv_resultado.compare(analizar_pkl_resultado)\n",
     "# Identificar las filas completas con diferencias\n",
-    "differences_indices = differencias_analisis.index\n",
+    "differences_indices = diferencias_analisis.index\n",
     "df_csv_diff = analizar_csv_resultado.loc[differences_indices]\n",
     "df_pkl_diff = analizar_pkl_resultado.loc[differences_indices]"
    ]
@@ -4479,10 +4479,7 @@
    "cell_type": "markdown",
    "id": "b78b4178cba28d0c",
    "metadata": {},
-   "source": [
-    "Confirmamos que los datos de estos archivos coinciden, y optamos inicialmente por usar la versión PKL para evitar el error con el país \"Namibia\".\n",
-    "Sin embargo, dada las dificulates en compatibilidad para los archivos PKL, dicidimos finalmente usar el archivo CSV y arreglar manualmente el dato de \"Namibia\" en la etapa de limpieza y enriquecimiento de datos."
-   ]
+   "source": "Confirmamos que los datos de estos archivos coinciden, y optamos inicialmente por usar la versión PKL para evitar el error con el país \"Namibia\"."
   },
   {
    "cell_type": "code",
