--- a/Obligatorio Big Data/analisis_archivo_pickle.ipynb
+++ b/Obligatorio Big Data/analisis_archivo_pickle.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "83b2b6d8-ae31-4dc5-a81e-06946ea2c895",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "dcfc4c320858c6cf",
    "metadata": {},
    "outputs": [
@@ -418,7 +418,7 @@
        "[162804 rows x 15 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "28ecc2de3122fb9f",
    "metadata": {},
    "outputs": [
@@ -759,7 +759,7 @@
        "[162804 rows x 15 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "52a0efa4615a7046",
    "metadata": {},
    "outputs": [],
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "693f90227a927b5e",
    "metadata": {},
    "outputs": [
@@ -1080,7 +1080,7 @@
        "14                                         IRM_POINTS  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1091,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "8d35c3cbdec1e0c2",
    "metadata": {},
    "outputs": [
@@ -1349,7 +1349,7 @@
        "14                                         IRM_POINTS  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1369,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "3e13a4db53139d4",
    "metadata": {},
    "outputs": [],
@@ -1380,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "ddc382717fa8c7ec",
    "metadata": {},
    "outputs": [],
@@ -1391,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "1ce33e8e940b5b15",
    "metadata": {},
    "outputs": [
@@ -1649,7 +1649,7 @@
        "14                                         IRM_POINTS  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1661,7 +1661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "d3d1fe401a099b8e",
    "metadata": {},
    "outputs": [
@@ -1919,7 +1919,7 @@
        "14                                         IRM_POINTS  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1933,11 +1933,13 @@
    "cell_type": "markdown",
    "id": "cbf419c81f92df2d",
    "metadata": {},
-   "source": "Evaluamos las diferencias que continúan entre los dos data frames"
+   "source": [
+    "Evaluamos las diferencias que continúan entre los dos data frames"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "66b08ed64871e5fb",
    "metadata": {},
    "outputs": [],
@@ -1951,7 +1953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "d64f8f7c744fd15c",
    "metadata": {},
    "outputs": [],
@@ -1965,7 +1967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "3223dcd89969e3f1",
    "metadata": {},
    "outputs": [
@@ -2048,7 +2050,7 @@
        "9                                                 SS  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2061,7 +2063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "453ef1d25eedd2e9",
    "metadata": {},
    "outputs": [
@@ -2144,7 +2146,7 @@
        "9                                                 SS  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2156,7 +2158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "548dfa9f14a05700",
    "metadata": {},
    "outputs": [],
@@ -2195,7 +2197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "af74954e0449de87",
    "metadata": {},
    "outputs": [
@@ -2276,7 +2278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "bb1e7ec8399079b4",
    "metadata": {},
    "outputs": [
@@ -2391,7 +2393,7 @@
        "[72 rows x 2 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2409,7 +2411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "eabcd2b76f9927dd",
    "metadata": {},
    "outputs": [],
@@ -2422,7 +2424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "id": "ce638b04424ed23b",
    "metadata": {},
    "outputs": [
@@ -2744,7 +2746,7 @@
        "[72 rows x 15 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2757,7 +2759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "id": "44a8847e4cacf78e",
    "metadata": {},
    "outputs": [
@@ -3079,7 +3081,7 @@
        "[72 rows x 15 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3091,7 +3093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "8266ef8c886e31ef",
    "metadata": {},
    "outputs": [
@@ -3137,7 +3139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "id": "4ce88a4eeab58aba",
    "metadata": {},
    "outputs": [
@@ -3256,7 +3258,7 @@
        "[72 rows x 3 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3267,7 +3269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "id": "4c6051ded07511da",
    "metadata": {},
    "outputs": [
@@ -3386,7 +3388,7 @@
        "[72 rows x 3 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3405,7 +3407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "id": "e8e8105f1fb31026",
    "metadata": {},
    "outputs": [],
@@ -3415,7 +3417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "id": "4e378cca3ce244e9",
    "metadata": {},
    "outputs": [
@@ -3474,7 +3476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "id": "5f93d47fa14f3aed",
    "metadata": {},
    "outputs": [
@@ -3602,7 +3604,7 @@
        "[7976 rows x 2 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3620,7 +3622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "id": "2b93af5e52be68df",
    "metadata": {},
    "outputs": [],
@@ -3633,7 +3635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "id": "d1f20e57282f7a5a",
    "metadata": {},
    "outputs": [
@@ -3955,7 +3957,7 @@
        "[7976 rows x 15 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3968,7 +3970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "id": "7b8ea0520eda5b88",
    "metadata": {},
    "outputs": [
@@ -4290,7 +4292,7 @@
        "[7976 rows x 15 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4310,7 +4312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "id": "15ec9263db2ba943",
    "metadata": {},
    "outputs": [],
@@ -4330,7 +4332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "id": "cb36ddd4b4d35732",
    "metadata": {},
    "outputs": [
@@ -4351,7 +4353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "id": "db10c2d67d06411c",
    "metadata": {},
    "outputs": [
@@ -4373,7 +4375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "id": "2e8de871c0ecf61f",
    "metadata": {},
    "outputs": [],
@@ -4392,7 +4394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 41,
    "id": "4755d3f6755ad7b4",
    "metadata": {},
    "outputs": [],
@@ -4403,7 +4405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "id": "e4ec0292c7a82aef",
    "metadata": {},
    "outputs": [
@@ -4425,7 +4427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 43,
    "id": "f9b5189ee4fd0378",
    "metadata": {},
    "outputs": [],
@@ -4435,7 +4437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 44,
    "id": "aba99f1dcf84f737",
    "metadata": {},
    "outputs": [],
@@ -4445,7 +4447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 45,
    "id": "3f052e5787fb0da7",
    "metadata": {},
    "outputs": [
@@ -4479,11 +4481,13 @@
    "cell_type": "markdown",
    "id": "b78b4178cba28d0c",
    "metadata": {},
-   "source": "Confirmamos que los datos de estos archivos coinciden, y optamos inicialmente por usar la versión PKL para evitar el error con el país \"Namibia\"."
+   "source": [
+    "Confirmamos que los datos de estos archivos coinciden, y optamos por usar la versión PKL para evitar el error con el país \"Namibia\"."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 47,
    "id": "a156bd06e971314f",
    "metadata": {},
    "outputs": [],
